[project]
name = "scryfall"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "fpdf2>=2.8.5",
    "httpx>=0.28.1",
    "pillow>=12.1.0",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.ruff.format]
quote-style = "double"